@@ -37,7 +37,7 @@ SAFESTOP=0
 # Name of the Shorewall CLI executable. Change this if you use the installer to
 # install in another location.
 #
-SWRL=/sbin/shorewall
+SRWL=/sbin/shorewall
 #
 # Name of the wait4ifup script Change this if you use the installer to install in
 # another location
