@@ -37,7 +37,7 @@ SAFESTOP=0
 # Name of the Shorewall6 CLI executable. Change this if you use the installer to
 # install in another location.
 #
-SWRL=/sbin/shorewall6
+SRWL=/sbin/shorewall6
 #
 # Name of the wait4ifup script Change this if you use the installer to install in
 # another location
