@@ -62,8 +62,9 @@ None.
     will install Shorewall's components in
 
     	 /usr/local/etc/shorewall/
-	 /usr/local/share/shorewall/
 	 /usr/local/sbin/
+	 /usr/local/share/shorewall/
+	 /usr/local/share/man/
 	 /usr/local/var/lib
 
     When run as root, the necessary files are installed in
